# port_openjpeg

./: CMakeLists.txt  _nord_openjpeg.vcxproj  cidx_manager.c  deployment.rc  nord_openjpeg.vcxproj  nord_openjpeg.vcxproj.filters  openjpeg.h  openjpeg.vcxproj  pi.h  port_openjpeg.def  port_openjpeg.vcxproj  port_openjpeg.vcxproj.filters  ppix_manager.c  thix_manager.c  tpix_manager.c
include/openjpeg/: openjpeg.h  opj_clock.h  opj_codec.h  opj_config.h  opj_config_private.h  opj_includes.h  opj_intmath.h  opj_inttypes.h  opj_malloc.h  opj_stdint.h
